--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "eslint": "^5.16.0",
     "react": "16.8.3",
-    "react-native": "0.59.9"
+    "react-native": "0.59.9",
+    "react-native-ionicons": "^4.5.6",
+    "react-native-vector-icons": "^6.5.0",
+    "react-navigation": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
