--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-ionicons": "^4.5.6",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^2.0.4"
   },
