--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "eslint": "^5.16.0",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-ionicons": "^4.5.6",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^2.0.4"
@@ -19,6 +19,11 @@
     "@babel/core": "7.4.5",
     "@babel/runtime": "7.4.5",
     "babel-jest": "24.8.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.14.2",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.3"
